small fix for too long answers

--- a/app/assets/stylesheets/answers.css.scss
+++ b/app/assets/stylesheets/answers.css.scss
@@ -16,6 +16,7 @@
 
 .answer_text {
   margin: 0;
+  overflow: auto;
   .filler {
     padding: 15px 5px;    
   }
